Add Facades, Validation of DTO, annotations instead of boilerplate by Lombok, DTO recorded